// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Visualizando 
    1
     
    despesa
     totalizando 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Visualizando 
    23
     
    despesas
     totalizando 
    $235,123,409.87
  </h1>
</div>
`;
